Fix : PWA Installation
Former-commit-id: 0290dbb407370b510553a267e63d8ed994eb0108

--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -46,11 +46,12 @@
     -->
   </body>
 
-  <script>
+  <!-- 추가 Code -->
+  <!-- <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker
         .register("service-worker.js") // 기존 Code
         .then((reg) => console.log("Service worker registered.", reg));
     }
-  </script>
+  </script> -->
 </html>
