--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -47,11 +47,12 @@
   </body>
 
   <!-- 추가 Code -->
-  <!-- <script>
+  <!-- 없으면 Download 안됌 -->
+  <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker
         .register("service-worker.js") // 기존 Code
         .then((reg) => console.log("Service worker registered.", reg));
     }
-  </script> -->
+  </script>
 </html>
