Fix : PWA Download4
Former-commit-id: 4a2de86f03dac5e43c85b7667796661e773d4926

--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -46,7 +46,7 @@
     -->
 
     <!-- 추가 Code -->
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("sw-cached-site.js", function () {
           navigator.serviceWorker.register("sw.js", {
@@ -55,6 +55,6 @@
         });
       }
       window.process = { env: { NODE_ENV: "production" } };
-    </script>
+    </script> -->
   </body>
 </html>
