--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -30,8 +30,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!--AI model with teachable machine with tensorflow.js-->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script> -->
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 
     <title>React App</title>
   </head>
