--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
-    <!-- 기존 Code -->
-    <link rel="manifest" href="manifest.json" crossorigin="use-credentials" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,15 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="/dist/output.css" rel="stylesheet" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <!-- 수정 Code -->
-    <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -47,17 +39,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-    <!-- 추가 Code -->
-    <!-- <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("sw-cached-site.js", function () {
-          navigator.serviceWorker.register("sw.js", {
-            scope: "/",
-          });
-        });
-      }
-      window.process = { env: { NODE_ENV: "production" } };
-    </script> -->
   </body>
 </html>
